--- a/package.json
+++ b/package.json
@@ -12,12 +12,14 @@
   "license": "ISC",
   "dependencies": {
     "@hapi/joi": "^17.1.1",
+    "dotenv": "^10.0.0",
     "express": "^4.17.1",
     "moment-timezone": "^0.5.33",
     "mysql": "^2.18.1",
     "nodemon": "^2.0.12"
   },
   "devDependencies": {
-    "cors": "^2.8.5"
+    "cors": "^2.8.5",
+    "cross-env": "^7.0.3"
   }
 }
